CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(jsmin LANGUAGES C)

FILE(GLOB src
    ${CMAKE_CURRENT_LIST_DIR}/jsmin/*.h
    ${CMAKE_CURRENT_LIST_DIR}/jsmin/*.hpp
	${CMAKE_CURRENT_LIST_DIR}/jsmin/*.c
	${CMAKE_CURRENT_LIST_DIR}/jsmin/*.cpp
)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_EXECUTABLE(jsmin ${src})

IF(UNIX)
    IF(NOT SKIP_INSTALL_LIBRARIES AND NOT SKIP_INSTALL_ALL)
        INSTALL(TARGETS jsmin
            RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
            ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
            LIBRARY DESTINATION "${INSTALL_LIB_DIR}")
    ENDIF()

    IF(LINUX64)
        SET(CPACK_GENERATOR "DEB")
        SET(CPACK_PACKAGE_VERSION_MAJOR "1")
        SET(CPACK_PACKAGE_VERSION_MINOR "0")
        SET(CPACK_PACKAGE_VERSION_PATCH "0")
        SET(CPACK_DEBIAN_PACKAGE_DEPENDS "")
        SET(CPACK_PACKAGE_DESCRIPTION "jsmin")
        SET(CPACK_PACKAGE_CONTACT "LonghronShen LonghronShen@hotmail.com")
        SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/Debian/postinst")

        INCLUDE(CPack)
    ENDIF()
ENDIF()